# OpenGL

./: CMakeLists.txt  README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: main.c  main.c.fake  main.cpp
src/camera/: camera.c  camera.h
src/rectangle/: vertex.glsl
src/shader/: shader.c  shader.h
src/triangle/: vertex.glsl
